Fixed the overflow issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -207,7 +207,7 @@ ul.task-list input[type="checkbox"] {
 
 @media (min-width: 576px) {
   .profile {
-    max-width: 45%;
+    width: auto;
 
     .address {
       p {
